[improve][start] test Flink20Container